--- a/media/fonts/fontello-66125060/config.json
+++ b/media/fonts/fontello-66125060/config.json
@@ -7,10 +7,10 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "0f6a2573a7b6df911ed199bb63717e27",
-      "css": "github-circled",
-      "code": 59392,
-      "src": "fontawesome"
+      "uid": "7e092c82e9a758b6e95297007969aac1",
+      "css": "left-circle",
+      "code": 59397,
+      "src": "websymbols"
     }
   ]
 }
